margin collapse fix

--- a/less/blocks/catalog-filter.less
+++ b/less/blocks/catalog-filter.less
@@ -20,14 +20,12 @@
 .catalog-filter__item {
 	margin-bottom: 20px;
 
-	@media (max-width: @screen-md) {
-		.form-group {
-			margin-bottom: 0;
-		}
+	.form-group {
+		margin-bottom: 0;
+	}
 
-		label {
-			margin-bottom: 0;
-		}
+	label {
+		margin-bottom: 0;
 	}
 
 	.collapse__link {
